fixed popup custom size and hided scrollbar

--- a/src/components/Popup/index.scss
+++ b/src/components/Popup/index.scss
@@ -59,39 +59,40 @@ $baseContentClass: 'vant-popup__content';
   }
 
   &__center {
-    max-height: 50vh;
-    max-width: 50vw;
     display: none;
   }
 
   &__left {
     height: 100vh;
-    max-width: 50vw;
     left: 0;
     transform: translateX(-100%);
   }
 
   &__right {
     height: 100vh;
-    max-width: 50vw;
     right: 0;
     transform: translateX(100%);
   }
 
   &__top {
-    max-height: 50vh;
     width: 100vw;
     top: 0;
     transform: translateY(-100%);
   }
 
   &__bottom {
-    max-height: 50vh;
     width: 100vw;
     bottom: 0;
     transform: translateY(100%);
   }
 }
+
+//chrome and Safari
+.#{$baseClass}::-webkit-scrollbar { width: 0 !important }
+//IE 10+
+.#{$baseClass} { -ms-overflow-style: none; }
+//Firefox
+.#{$baseClass} { overflow: -moz-scrollbars-none; }
 
 .vant-popup__center.vant-popup__isActive {
   display: block;
